<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ModuloSSHActivity!</string>
    <string name="app_name">ModuloSSH</string>
    <string name="puerto">22</string>
    <string name="conectar">Conectar</string>
    <string name="desconectar">Desconectar</string>
    <string name="Selecciona">Selecciona una conexión</string>
    <string name="vacio"></string>
    <string name="uno">1</string>
    <string name="descripcion">Descripción</string>
    <string name="ip">IP:</string>
    <string name="usuario">Usuario:</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre">Nombre</string>
    <string name="ID">ID</string>
    <string name="ID2">ID:</string>
    <string name="Cantidad">Cantidad:</string>
    <string name="nombre2">Nombre:</string>
    <string name="guardar">Guardar</string>
    <string name="ejecutar">Ejecutar</string>
    <string name="all">Des/seleccionar</string>

</resources>