<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_formulario_User"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_formulario_User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </EditText>

        <TextView
            android:id="@+id/tv_formulario_Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_formulario_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_formulario_Host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Host"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_formulario_Host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_formulario_Port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Port"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_formulario_Port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puerto" />

         <TextView
             android:id="@+id/tv_formulario_Desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/descripcion"
             android:textSize="20dp" />

        <EditText
            android:id="@+id/et_formulario_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vacio" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="100" >

            <Button
                android:id="@+id/bt_formulario_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/ok" />

            <Button
                android:id="@+id/bt_formulario_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/cancelar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>