<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tv_list_comandos_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uno"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_list_comandos_total"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:weightSum="100" >

        <LinearLayout
            android:id="@+id/ll_comandos_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50" >

            <TextView
                android:id="@+id/tv_comandos_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre2"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/tv_comandos_nombre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#0000FF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_comandos_cnatidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight="50"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_comandos_cantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cantidad"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/tv_comandos_cantidad2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#0000FF" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>